--- a/Big Data and Machine Learning Coursework/test1.ipynb
+++ b/Big Data and Machine Learning Coursework/test1.ipynb
@@ -1558,17 +1558,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 59,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[48.21999967098236,\n",
+       " 57.89999961853027,\n",
+       " 21.029999999999998,\n",
+       " 11.35,\n",
+       " 19.470000000000002,\n",
+       " 9.48]"
+      ]
+     },
+     "execution_count": 59,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "results = [resultsF[1]*100,resultsC[1]*100, svc_scoreC*100, svc_scoreF*100, knn_score*100, knn_scoreF*100]\n",
-    "results = [47.09999859333038,\n",
-    " 57.27999806404114,\n",
-    " 21.029999999999998,\n",
-    " 11.35,\n",
-    " 19.470000000000002,\n",
-    " 9.48]\n"
+    "results"
    ]
   },
   {
